--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/project/svgplot_sebastian-achim-mueller
+      url: https://pypi.org/project/svgplot
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
